--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jspdf": "^2.5.2",
     "html2canvas": "^1.4.1",
     "octokit": "^4.0.2",
-    "date-fns": "^4.1.0"
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.456.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
